--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="nav-container">
         <nav>
             <div class="logo">
-                <h1>FlexFit</h1>
+                <h1>FlexFit GYM</h1>
             </div>
             <ul>
                 <li>
